# beamformer

./: .gitignore  README.md  pyproject.toml
bench/: ablate.py  bench.py  bench_numpy.py  show_history.py
scripts/: diagnose_synth.py  make_bmode.py  make_bmode_all.py  show_raw.py  sweep_c.py
src/beamformer/: __init__.py  data.py  mlx_kernel.py  params.py  reference.py  synthetic.py  visualize.py
tests/: test_correctness.py
