[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamformer"
version = "0.1.0"
description = "fast 2d delay-and-sum ultrasound beamformer for apple silicon."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "charlie wang" }]
license = { text = "MIT" }
dependencies = [
    "h5py>=3.10",
    "mlx>=0.31",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
test = ["pytest>=8"]
dev  = ["pytest>=8", "matplotlib>=3.8"]

[project.scripts]
beamform-bench = "bench.bench:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]